Added referenceType as per backend team discussion
